[package]
name = "wasm_framework_tests"
version = "0.1.0"
edition = "2021"

#[lib]
#crate-type = ["cdylib"]

[dependencies]
httpcodec = "0.2.3"
bytecodec = "0.4.15"
wasmedge_wasi_socket = "0" 
#{ git = "https://github.com/labormedia/wasmedge_wasi_socket.git" }
libp2p = { git = "https://github.com/petaloop/rust-libp2p", optional = true, features = [ "wasm-ext", "wasm-ext-websocket", "ping"] }
libp2p-swarm = { version = "0.40.1", optional = true }
libp2p-core = { version = "0.37.0", optional = true }
libp2p-mdns = { version = "0.41.0", optional = true }
wasmedge-bindgen = "0.1.0"
wasmedge-bindgen-macro = "0.1.0"

[patch.crates-io]
wasm-bindgen = { git = "https://github.com/KernelErr/wasm-bindgen.git", branch = "wasi-compat" }

[features]
full = [
    "libp2p-core",
    "libp2p",
    "libp2p-mdns",
    "libp2p-swarm"
]
p2p = [ "libp2p", "libp2p-swarm"]

[[example]]
name = "libp2p"
required-features = []